--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -61,6 +61,7 @@ jobs:
           timeoutInMinutes: 1800
           variables:
             PLATFORM_ARCH: arm64
+            BUILD_OPTIONS: ${{ parameters.buildOptions }} VERSION_CONTROL_OPTIONS=
         - name: generic
           variables:
             dbg_image: yes
@@ -72,6 +73,7 @@ jobs:
           timeoutInMinutes: 1800
           variables:
             PLATFORM_ARCH: armhf
+            BUILD_OPTIONS: ${{ parameters.buildOptions }} VERSION_CONTROL_OPTIONS=
         - name: mellanox
           variables:
             dbg_image: yes
