--- a/Makefile.work
+++ b/Makefile.work
@@ -57,7 +57,7 @@ else
 COMPILE_HOST_ARCH := amd64
 endif
 
-COMPILE_HOST_ARCHS := $(COMPILE_HOST_ARCH) $(ADDITIONAL_COMPILE_HOST_ARCHS)
+COMPILE_HOST_ARCHS := $(COMPILE_HOST_ARCH) $(HOST_ARCHS)
 
 
 ifeq ($(USER), root)
