--- a/.azure-pipelines/azure-pipelines-build.yml
+++ b/.azure-pipelines/azure-pipelines-build.yml
@@ -121,6 +121,7 @@ jobs:
             if [ $(syncd_rpc_image) == yes ]; then
               make $BUILD_OPTIONS ENABLE_SYNCD_RPC=y target/sonic-$(GROUP_NAME).bin
               mv target/sonic-mellanox.bin target/sonic-$(GROUP_NAME)-rpc.bin
+              mv target/sonic-mellanox.bin.log target/sonic-mellanox-rpc.bin.log
             fi
             make $BUILD_OPTIONS target/sonic-$(GROUP_NAME).bin
           fi
