--- a/.azure-pipelines/azure-pipelines-image-template.yml
+++ b/.azure-pipelines/azure-pipelines-image-template.yml
@@ -7,6 +7,9 @@ parameters:
 - name: 'preSteps'
   type: stepList
   default: []
+- name: 'checkoutSteps'
+  type: stepList
+  default: []
 - name: 'buildSteps'
   type: stepList
   default: []
@@ -26,7 +29,7 @@ jobs:
     jobVariables: ${{ parameters.jobVariables }}
     preSteps:
       - template: cleanup.yml
-      - ${{ parameters. preSteps }}
+      - ${{ parameters.preSteps }}
       - script: |
           if [ -n "$(CACHE_MODE)" ] && echo $(PLATFORM_AZP) | grep -E -q "^(vs|broadcom|mellanox)$"; then
             CACHE_OPTIONS="SONIC_DPKG_CACHE_METHOD=$(CACHE_MODE) SONIC_DPKG_CACHE_SOURCE=/nfs/dpkg_cache/$(PLATFORM_AZP)"
@@ -36,7 +39,9 @@ jobs:
         displayName: "Set cache options"
       - checkout: self
         submodules: recursive
+        path: s
         displayName: 'Checkout code'
+      - ${{ parameters.checkoutSteps }}
       - script: |
           BRANCH_NAME=$(Build.SourceBranchName)
           [ -n "$SYSTEM_PULLREQUEST_PULLREQUESTID" ] && BRANCH_NAME="$SYSTEM_PULLREQUEST_TARGETBRANCH-$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER"
